--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
                         <span class="say">Nhân ngày 8/3 này, tớ xin chúc cậu mãi xinh đẹp, đáng yêu, luôn hạnh phúc. Chúc cậu luôn gặp may mắn trong cuộc sống và vui vẻ mọi lúc mọi nơi. Luôn mang nụ cười theo bên mình nhaaaa.</span><br>
                         <span class="say">Chúc cậu ngày 8/3 thật vui vẻ và tràn đầy sự xinh đẹp cùng với nhiều yêu thương. </span><br>
                         <span class="say"><span class="space"><img width="100px" height="100px" src="image/tym.png" alt=""><br>
-                        <span class="say"><span class="space"></span> --To@nf-- </span>
+                        <span class="say"><span class="space"></span> --My friend-- </span>
                     </font>
                     </p>
                 </div>
@@ -37,7 +37,7 @@
     </div>
 
     <audio id="myAudio" autoplay="autoplay">
-        <source src="music/nhaclove.mp3" type="audio/mp3" />
+        <source src="music/toan.mp3" type="audio/mp3" />
     </audio>
 
 </body>
